Wed 11 Oct 2017
   *  apparix-17-001 released.

   *  Fixed completion function (SHA: 1266cd67f48bf805973e764a4dcb762422bc50ad)
		+ Add missing suffix '/' when completing directory with 'to'
		+ Ignore suffix if target is a filename

Thu 3 March 2011

   *  apparix-11-062 released.

   *  The option -pick was added to support the new bash function 'whence'.


Wed 26 Nov 2008

   *  apparix-08-331 released.

   *  The bash completion code was changed to improve tab completion on
      subdirectories of the mark.  First, a bug was fixed where this completion
      would include subdirectories of the current directory. Second,
      patterns with no matching subdirectories will never generate an error
      but simply stall completion, utilizing the bash nullglob option.

   *  Fixed a bug in the string library - unlikely to affect apparix.


Thu 24 Jul 2008

   *  apparix-08-206 released.

   *  The apparix function 'to' can now be used as a drop-in replacement
      for cd.

   *  Apparix and its wrappers have been expanded so that they act as
      a replacement for cd in cases where the mark is not a bookmark but
      exists as an accessible directory.  Bash tab completion acts by default
      transparently and simultaneously on both bookmarks and accessible
      directories.

   *  Added options --try-current-first and --try-current-last.  These can be
      used in the 'to' definition, instructing apparix to check whether the
      mark is also the name of an accessible directory.  The definitions of
      'to' as shipped with apparix do this, using --try-current-first.

   *  Added option --tell-current. This will notify the user if an entry was
      found as a regular directory rather than via bookmark lookup. Only
      meaningful in conjunction with one of the options above.

Tue 18 Sep 2007

   *  apparix-07-261 released.

   *  --squash-mark and --squash-dest have gone. They are now replaced