@@ -217,11 +217,23 @@ const char* shell_examples[] =
 ,  "  nullglobsa=$(shopt -p nullglob)"
 ,  "  shopt -s nullglob"
 ,  "  if let $(($COMP_CWORD == 1)); then"
-,  "    # now cur=<apparix mark> (completing on this) and dir='to'"
-,  "    # Below will complete on subdirectories of current directory. swap if so desired."
-,  "    # COMPREPLY=( $( (cat $HOME/.apparix{rc,expand} | grep \"\\<j,\" | cut -f2 -d, ; ls -1p | grep '/$' | tr -d /) | grep \"\\<$cur.*\" ) )"
-,  "    # Below will not complete on subdirectories of current directory. swap if so desired."
-,  "    COMPREPLY=( $( cat $HOME/.apparix{rc,expand} | grep \"j,.*$cur.*,\" | cut -f2 -d, ) )"
+,  "    #get words from bookmars list"
+,  "    local words=$( cat $HOME/.apparix{rc,expand} | grep \"\\<j,\" | cut -f2 -d, )"
+,  "    #without tree command, string is empty, preview-window is hidden"
+,  "    type tree &> /dev/null && local cmd_tree=\"eval 'tree {3} -L 1 -C | head -100'\""
+,  "    #trigger fzf if it's available"
+,  "    if [ -z \"$cur\" ] && type fzf &> /dev/null; then"
+,  "        #fzf: --wit-nth show only second and third column (first is 'j')"
+,  "        #fzf: --nth=1 limits search only on first displayed column"
+,  "        #postprocess: trim repeated whitespace then cut to return only second column (bookmark)"
+,  "        words=$(cat $HOME/.apparix{rc,expand} | column -s ',' -t |"
+,  "                fzf --with-nth=2,3 --nth=1 --preview=\"$cmd_tree\" |"
+,  "                tr -s ' ' | cut -d ' ' -f2)"
+,  "    fi"
+,  "    #filter words based on cursor"
+,  "    words=$( compgen  -W \"$words\" -- $cur )"
+,  "    #add words with extra space at the end into completion array"
+,  "    for w in $words; do COMPREPLY+=( \"$w \" ); done"
 ,  "  else"
 ,  "    # now dir=<apparix mark> and cur=<subdirectory-of-mark> (completing on this)"
 ,  "    # or cur=<fileordir> (when bound for example to ae)"
